--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="Andrew_And_Snails_Purple 1.jpg" alt="Andrew" height="1000">
         <img src="imaginary_friends.jpg" alt="imaginary friends" height="1000"><br>
       <div class="about"> <h2>About me:</h2>
-        <p>Just a silly humanbeing navigating Earth through colors and shapes, trying to connect to people around me.<br>
+        <p>Just a silly humanbeing navigating Earth through colors and shapes, trying to connect with people around me.<br>
             Currently studying Visual Communication, Coded Design at DMJX (Copenhagen, Denmark)<br>
             Freelance digital illustrator and artist. Let's share crazy ideas and paint the world pruple. 
         </p>
