"Helena leger med JS"

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hollænder portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     
@@ -24,12 +25,17 @@
     <p>Hello World! <br>
         You have entered the magical maze of Helenas mind. Enjoy.</p>
 
-        <img src="Never_Bored 2.jpg" alt="Never Bored portrait" height="1000">
-        <img src="Lipstick_Lover 1.jpg" alt="Lipstick Lover portait" height="1000">
-        <img src="Andrew_And_Snails_Purple 1.jpg" alt="Andrew" height="1000">
-        <img src="imaginary_friends.jpg" alt="imaginary friends" height="1000"><br>
+        <div class="gallery">
+            <ul>
+                <li><img class="pics" src="Never_Bored 2.jpg" alt="Never Bored portrait"></li>
+                <li><img class="pics" src="Lipstick_Lover 1.jpg" alt="Lipstick Lover portait"></li> 
+                <li><img class="pics" src="Andrew_And_Snails_Purple 1.jpg" alt="Andrew"></li>
+                <li><img class="pics" src="imaginary_friends.jpg" alt="imaginary friends"><br></li>
+           </ul>
+        </div>
+        
       <div class="about"> <h2>About me:</h2>
-        <p>Just a silly humanbeing navigating Earth through colors and shapes, trying to connect with people around me.<br>
+        <p id="about">Just a silly humanbeing navigating Earth through colors and shapes, trying to connect with people around me.<br>
             Currently studying Visual Communication, Coded Design at DMJX (Copenhagen, Denmark)<br>
             Freelance digital illustrator and artist. Let's share crazy ideas and paint the world pruple. 
         </p>
