Helena done fredag. JS er lidt hårdt

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
 
 <body>
-   <h1>
+   <h1 id="overskrift">
     Helena <br>Hollænder<br>
     <a href="https://helenahollaender.wixsite.com/helena-hollaender" target="_blank"><img src="Tongue_W._Color.png" alt="Tongue.png" height="800px"></a>
    </h1> 
