Helena leger med JS pt. 2

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <li><img class="pics" src="imaginary_friends.jpg" alt="imaginary friends"><br></li>
            </ul>
         </div>
+        <h2 id="listetitel"></h2>
+        <section id="inspiration">
+
+        </section>
         
       <div class="about"> <h2>About me:</h2>
         <p id="about">Just a silly humanbeing navigating Earth through colors and shapes, trying to connect with people around me.<br>
